style: font weight

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@600&subset=hiragana,katakana&family=Poppins:wght@500;700&subset=latin&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@600&subset=hiragana,katakana&family=Poppins:wght@500&subset=latin&display=swap"
       rel="stylesheet"
     />
     <meta name="description" content="a simple kana quiz" />
